[gd_scene load_steps=9 format=3 uid="uid://3oyf2csjg2pm"]

[ext_resource type="Script" path="res://world.gd" id="1_b8xqr"]
[ext_resource type="PackedScene" uid="uid://u1m3xqe4xp8s" path="res://player.tscn" id="2_m8nwv"]
[ext_resource type="PackedScene" uid="uid://bq5iurag37sky" path="res://level_failed.tscn" id="4_ehtw6"]
[ext_resource type="PackedScene" uid="uid://dmaj86bsp1jkj" path="res://level_completed.tscn" id="5_famin"]
[ext_resource type="PackedScene" uid="uid://bannldx3oi7a3" path="res://level_tile_map.tscn" id="6_aokbp"]

[sub_resource type="Animation" id="Animation_s2jt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in: 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_haj7w"]
resource_name = "countdown"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in: 3", "Start in: 2", "Start in: 1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0lrs"]
_data = {
"RESET": SubResource("Animation_s2jt3"),
"countdown": SubResource("Animation_haj7w")
}

[node name="World" type="Node2D"]
script = ExtResource("1_b8xqr")

[node name="Player" parent="." instance=ExtResource("2_m8nwv")]
position = Vector2(24, 40)
safe_margin = 0.1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_famin")]
visible = false
metadata/_edit_use_anchors_ = true

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.207843)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in: 3"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 9.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
vertical_alignment = 1

[node name="LevelFailed" parent="CanvasLayer" instance=ExtResource("4_ehtw6")]
visible = false

[node name="LevelTileMap" parent="." instance=ExtResource("6_aokbp")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_e0lrs")
}

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
[connection signal="retry" from="CanvasLayer/LevelFailed" to="." method="_on_level_failed_retry"]
